kubernetes/applications/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: everlab

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: n8n

  ports:
    - name: http
      port: 5678
      targetPort: http
      protocol: TCP
